--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,13 +18,24 @@ dependencies:
   avatar_glow: ^3.0.1
   slide_to_act: ^2.0.2
   google_fonts: ^6.1.0
+  camera: ^0.10.5
+  path_provider: ^2.1.1
+  intl: ^0.19.0
+  gal: ^2.3.2
+  shared_preferences: ^2.5.4
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^3.0.0
+  flutter_launcher_icons: ^0.13.1
 
 flutter:
   uses-material-design: true
   assets:
     - assets/alert_sound.mp3
+
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/app_icon.png"
